package com.habileducation.themovie.android.util

/**
 * Created by Annas Surdyanto on 23/11/21.
 *
 */
object TestTag {
    const val leadingIcon = "Leading Icon"
    const val trailingIcon = "Trailing Icon"
    const val movieDetailIcon = "Movie Detail Icon"
    const val movieDetailOverview = "Movie Detail Overview"
    const val movieDetailReleaseDate = "Movie Detail Release Date"
    const val movieDetailBudget = "Movie Detail Budget"
    const val movieDetailPopularity = "Movie Detail Popularity"
    const val movieDetailVote = "Movie Detail Vote"
}